@@ -6,7 +6,6 @@
 .tracing { background-color: #F0F8FF; }
 .warning { background-color: #EEE8AA; }
 .error { background-color: #FFC1C1; }
-.debug { background-color: #FFE4E1; }
 
 .report { display: none; }
 
